--- a/Informe.tex
+++ b/Informe.tex
@@ -79,7 +79,7 @@ Integrantes: \\
 \vspace{\baselineskip}
 \begin{flushleft}
 Condori Gutierrez, Flor de Maria            	\hfill	(2015053227) \\
-
+Escalante Maron,  Nelia            	\hfill	(2014049551) \\
 \end{flushleft}
 \end{large}
 \end{center}
@@ -92,6 +92,6 @@ Condori Gutierrez, Flor de Maria            	\hfill	(2015053227) \\
 \setcounter{page}{1} % REINICIAR CONTADOR DE PAGINAS DESPUES DEL INDICE
 
 \include{Secciones/Actividad01}
-
+\include{Secciones/Actividad02}
 
 \end{document}
