--- a/Informe.tex
+++ b/Informe.tex
@@ -80,6 +80,7 @@ Integrantes: \\
 \begin{flushleft}
 Condori Gutierrez, Flor de Maria            	\hfill	(2015053227) \\
 Escalante Maron,  Nelia            	\hfill	(2014049551) \\
+Salamanca Contreras, Fiorella Rosmery           	\hfill	(2015053237) \\
 \end{flushleft}
 \end{large}
 \end{center}
@@ -93,5 +94,6 @@ Escalante Maron,  Nelia            	\hfill	(2014049551) \\
 
 \include{Secciones/Actividad01}
 \include{Secciones/Actividad02}
+\include{Secciones/Actividad03}
 
 \end{document}
