--- a/Informe.tex
+++ b/Informe.tex
@@ -81,6 +81,8 @@ Integrantes: \\
 Condori Gutierrez, Flor de Maria            	\hfill	(2015053227) \\
 Escalante Maron,  Nelia            	\hfill	(2014049551) \\
 Salamanca Contreras, Fiorella Rosmery           	\hfill	(2015053237) \\
+Coaquira Calizaya, Yerson      	\hfill	(2015053225) \\
+Espinoza Caso, Lizbeth  		\hfill	(2011040667) \\
 \end{flushleft}
 \end{large}
 \end{center}
@@ -95,5 +97,6 @@ Salamanca Contreras, Fiorella Rosmery           	\hfill	(2015053237) \\
 \include{Secciones/Actividad01}
 \include{Secciones/Actividad02}
 \include{Secciones/Actividad03}
+\include{Secciones/Actividad04}
 
 \end{document}
