--- a/Secciones/Actividad04.tex
+++ b/Secciones/Actividad04.tex
@@ -209,11 +209,58 @@ A continuación, se visualizará una pantalla que solicitará la ejecución de d
 \vspace{\baselineskip}
 
 Para lo cual será necesario abrir una ventana de Terminal e iniciar sesión como usuario root, ejecutar los comandos y cerrar sesión. Escribir los siguientes comandos en la ventana de Terminal y luego volver a la ventana de ejecución de Comandos del instalador de Oracle Database y presionar el botón OK (Aceptar).
+\begin{center}
+	\includegraphics[width=16cm]{./Imagenes/86} 
+\end{center}
 
 \vspace{\baselineskip}
 
 La siguiente pantalla mostrará la finalización del proceso de instalación. Tomar nota de dirección electrónica (URL) para hacer uso de la herramienta Enterprise Manager Database Control. Finalmente presionar el botón Exit (Salir).
+\begin{center}
+	\includegraphics[width=16cm]{./Imagenes/87} 
+\end{center}
 
 \vspace{\baselineskip}
 
 Como último paso y con la finalidad de verificar de que la instalación ha sido exitosa, iniciar un navegador de Internet (Mozilla u otro similar), e introducir la dirección electrónica de la cual se tomó nota en el paso anterior. Si todo es correcto aparecerá la interfaz de inicio de sesión de la herramienta Enterprise Manager (Administrador Empresarial) de Oracle.
+\begin{center}
+	\includegraphics[width=16cm]{./Imagenes/91} 
+\end{center}
+
+
+Pero, si aparece la siguiente advertencia. para lo cual debemos ir a la Opcion I Understand the Risks
+\begin{center}
+	\includegraphics[width=15cm]{./Imagenes/88} 
+\end{center}
+
+Lo cual nos desglosara un comunicado, el cual presionamos el boton Add Exception
+\begin{center}
+	\includegraphics[width=15cm]{./Imagenes/89} 
+\end{center}
+
+Nos aparecera una nueva ventana de Advertencia donde presionaremos Confirm Security Exception
+\begin{center}
+	\includegraphics[width=10cm]{./Imagenes/90} 
+\end{center}
+
+Ya al culminar estos pasos podremos visualizar nuestra pagina de Login, donde podremos colocar nuestros datos
+\begin{center}
+	\includegraphics[width=15cm]{./Imagenes/92} 
+\end{center}
+
+Y cuando ingresemos nos aparecera la siguiente pagina de inicio
+\begin{center}
+	\includegraphics[width=15cm]{./Imagenes/93} 
+\end{center}
+
+Para no olvidarnos, es bueno mantener anotado la Url y los datos del Login.
+\begin{center}
+	\includegraphics[width=15cm]{./Imagenes/94} 
+\end{center}
+
+
+
+
+
+
+
