--- a/Informe.tex
+++ b/Informe.tex
@@ -98,5 +98,6 @@ Espinoza Caso, Lizbeth  		\hfill	(2011040667) \\
 \include{Secciones/Actividad02}
 \include{Secciones/Actividad03}
 \include{Secciones/Actividad04}
+\include{Secciones/Actividad05}
 
 \end{document}
