--- a/Secciones/Actividad05.tex
+++ b/Secciones/Actividad05.tex
@@ -52,9 +52,19 @@ Se puede consultar el valor en el fichero /proc/sys/fs/file-max y /proc/sys/fs/f
 		\includegraphics[width=8cm]{./Imagenes/fsFileE3} 
 	\end{center}
 El fichero file-nr muestra tres parámetros. 3936 Descriptores de ficheros asignados. 0 Descriptores de ficheros que no están en uso pero fueron asignados. 707452 Límite de descriptores de ficheros del sistema del sistema (/proc/sys/fs/file-max).\\ \\
-{\bfseries kernel.shmmni}
-\\
-\\
+{\bfseries kernel.shmmni}\\
+
+Los parámetros SHMALL , shmmax y shmmni determinan cómo está disponible la cantidad de memoria compartida para Oracle para su uso. Estos parámetros se establecen en las páginas de memoria, no en bytes, por lo que los tamaños utilizables son el valor multiplicado por el tamaño de la página, típicamente 4096 bytes. Para confirmar el tamaño de página, utilice el comando -a getconf | grep PAGE\_SIZE
+\begin{itemize}
+	\item shmall : La cantidad total de memoria compartida (en páginas) que puede asignarse en el sistema de
+	\item shmmax : El tamaño máximo de un segmento de memoria compartida (en páginas)
+	\item shmmni : El número máximo de segmentos de memoria compartida disponible en el sistema
+\end{itemize}
+El valor para shmmni tiene que ser al menos tan alta como el número de bases de datos que están destinados a ser puesto en el sistema, pero en la práctica es generalmente mucho más alta (Oracle recomienda 4096.) \\ \\
+La guía de instalación rápida incluye instrucciones sobre la comprobación de estos parámetros. Si necesitan ser modificados, se pueden establecer en el archivo /etc/sysctl.conf con las entradas como las siguientes:
+	\begin{center}
+	\includegraphics[width=8cm]{./Imagenes/kernelShimi} 
+\end{center}
 
 {\bfseries  kernel.sem}
 \\
